# kimini

./: .dockerignore  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.linux  Makefile  README.md  README_CN.md  build.rs
.agents/skills/ship/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: codex-reference-architecture.md  native-gui-framework-selection.md  native-gui-spec.md
docs/brand/: README.md
docs/research/: 2026-07-19-readme-release-research.md  2026-07-19-windows-linux-platform-support.md  2026-07-20-direct-api-harness-architecture.md
docs/screenshots/: README.md
packaging/linux/: io.github.reedchan7.Kimini.desktop  io.github.reedchan7.KiminiWeb.desktop
packaging/macos/: Info.plist  sparkle-public-key.txt
scripts/: fetch-sparkle.sh  package-linux-docker.sh  package-linux.sh  package-macos.sh  package-windows.ps1  publish-release.sh  ship.sh  sign-sparkle-update.sh
src/: daemon.rs  i18n.rs  lib.rs  main.rs  updater.rs
src/api/: error.rs  export.rs  mod.rs  multipart.rs  rest.rs  socket.rs
src/api/rest/: auth.rs  catalog.rs  config.rs  file.rs  fs.rs  goals.rs  interaction.rs  meta.rs  mod.rs  prompt.rs  session.rs  side_chat.rs  skills.rs  tasks.rs  terminals.rs  workspace.rs
src/api/socket/: frame.rs  mod.rs  worker.rs
src/daemon/: connection.rs  discovery.rs  health.rs  mod.rs  process.rs  source.rs
src/i18n/: locale.rs
src/legacy_web/: app.rs  menu.rs  mod.rs  navigation.rs  pages.rs  settings.rs
src/model/: mod.rs  reducer.rs  state.rs
src/native/: app.rs  attachment.rs  auth.rs  bootstrap.rs  commands.rs  draft.rs  files.rs  goals.rs  lifecycle.rs  mod.rs  preferences.rs  presentation.rs  prompt_queue.rs  prompt_runtime.rs  session_list.rs  shell.rs  side_chat.rs  skills.rs  slash.rs  streaming.rs  tasks.rs  theme.rs
src/native/browser/: address.rs  controller.rs  mod.rs  pane.rs
src/native/commands/: archive.rs  auth.rs  config.rs  export.rs  files.rs  goals.rs  history.rs  interaction.rs  language.rs  mod.rs  recovery.rs  runtime.rs  side_chat.rs  skills.rs  tasks.rs  terminal.rs  workspace.rs
src/native/commands/prompt/: mod.rs  queue.rs  send.rs  skills.rs  slash.rs
src/native/commands/session/: create.rs  history.rs  mod.rs  rename.rs
src/native/presentation/: content.rs  mod.rs
src/native/presentation/tool/: diff.rs  mod.rs  summary.rs
src/native/question/: drafts.rs  inputs.rs  mod.rs
src/native/terminal/: buffer.rs  local.rs  mod.rs
src/native/view/: accessible_input.rs  auth.rs  browser.rs  composer.rs  composer_attachment.rs  composer_controls.rs  composer_slash.rs  conversation.rs  goal.rs  interaction.rs  message.rs  mod.rs  new_session.rs  panel.rs  prompt_queue.rs  recovery.rs  session_search.rs  settings.rs  settings_components.rs  side_chat.rs  sidebar.rs  sidebar_row.rs  skills.rs  tasks.rs  terminal.rs  thinking.rs  tool_card.rs
src/native/view/files/: format.rs  mod.rs  preview.rs  tree.rs
src/native/view/interaction/: approval.rs  mod.rs  question.rs
src/native/view/toolbar/: controls.rs  mod.rs  title.rs
src/protocol/: auth.rs  control.rs  event.rs  file.rs  fs.rs  goal.rs  interaction.rs  message.rs  mod.rs  model.rs  prompt.rs  session.rs  side_chat.rs  skill.rs  snapshot.rs  status.rs  task.rs  terminal.rs  workspace.rs
tests/: app_model_scenarios.rs  legacy_web_contract.rs  live_daemon.rs  protocol_contract.rs  release_update_contract.rs  rest_client_contract.rs
tests/support/: mod.rs
