[package]
name = "kimini"
version = "0.1.0"
edition = "2024"
description = "The lightest way to browse. Single-site shell for Kimi Code Web."
license = "MIT"
publish = false

[dependencies]
tao = "0.34"
wry = "0.55"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.19", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
